# TheUniverseVaultAPI

./: .gitignore  README.md  TUVINS.json  pyproject.toml  requirements.txt
api/: router.py
api/models/: galaxy.py  moon.py  planet.py  solar_system.py  star.py
api/private/: __init__.py
api/private/galaxies/: __init__.py
api/private/galaxies/solar_systems/: __init__.py
api/private/galaxies/solar_systems/planets/: __init__.py
api/private/galaxies/solar_systems/planets/moons/: __init__.py
api/private/galaxies/solar_systems/stars/: __init__.py
api/public/: __init__.py
api/public/galaxies/: __init__.py
api/public/galaxies/solar_systems/: __init__.py
api/public/galaxies/solar_systems/planets/: __init__.py
api/public/galaxies/solar_systems/planets/moons/: __init__.py
api/public/galaxies/solar_systems/stars/: __init__.py
api/schemas/: galaxy.py  moon.py  planet.py  response.py  solar_system.py  star.py
app/: main.py
app/core/: config.py  database.py
