[tool.poetry]
name = "theuniversevault"
version = "0.1.0"
description = ""
authors = ["Ihor Savenko <csigorek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beanie = "^1.26.0"
fastapi = "^0.111.1"
jwt = "^1.3.1"
motor = "^3.5.1"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
